# RAG

./: .env.example  .gitignore  README.md  app.py  generateanswerplusevaluation.py  main.py  pyproject.toml  rag.py  requirements.txt  todo.txt
.github/workflows/: deploy.yml  rag_eval.yml
backend/: main.py
chroma_db/d1d12e97-a974-4d6a-bded-b803c2d1e3c5/: index_metadata.pickle
docs/: CHUNKING_STRATEGY.md
experiments/: benchmark.py  full_eval.py  rag.py
experiments/documents/: PMKVY_RPL.md  PMKVY_STT_Scheme.md  PMKVY_Special_Projects.md
experiments/results/: eval_report.json
frontend/: components.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
pdr_db/: chroma.sqlite3
src/: rag.py  restart.py  streamlit_app.py
src/chroma_db/: chroma.sqlite3
src/chunking/: __init__.py  structure.py
src/config/: __init__.py  prompts.yaml  settings.yaml
src/generation/: models.py
src/memory/: working.py
src/metrics/: citation.py  retrieval_eval.py
src/observability/: __init__.py  tracer.py
src/retrieval/: hierarchical.py  hybrid.py
tests/: eval_pipeline.py
